Update ad configurations in index.html

--- a/index.html
+++ b/index.html
@@ -1333,12 +1333,11 @@
             <!-- Premium Ad Space -->
             <div class="ad-container content-ad" style="margin: var(--spacing-xl) 0; background: linear-gradient(135deg, var(--primary-orange-light), var(--background-secondary)); border: 2px solid var(--primary-orange); border-radius: var(--radius-lg);">
                 <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-6409311049525505"
-                     data-ad-slot="8234567890"
-                     data-ad-format="fluid"
-                     data-ad-layout-key="-6t+ed+2i-1n-4w"
-                     data-full-width-responsive="true"></ins>
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-6409311049525505"
+     data-ad-slot="4452408958"></ins>
             </div>
         </div>
     </section>
@@ -1422,12 +1421,11 @@
             <!-- Mid-Content Premium Ad (After User Engagement) -->
             <div class="ad-container mid-content-ad" style="margin: var(--spacing-2xl) 0; background: linear-gradient(135deg, var(--accent-blue-hover), var(--primary-orange-light)); border: 2px solid var(--accent-blue); border-radius: var(--radius-lg); padding: var(--spacing-lg);">
                 <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-6409311049525505"
-                     data-ad-slot="7317445135"
-                     data-ad-format="fluid"
-                     data-ad-layout-key="-fb+5w+4e-db+86"
-                     data-full-width-responsive="true"></ins>
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-6409311049525505"
+     data-ad-slot="4452408958"></ins>
             </div>
             
             <!-- Latest Gaming Trends -->
@@ -1567,12 +1565,11 @@
             <!-- Premium Bottom Ad -->
             <div class="ad-container footer-ad" style="margin-top: var(--spacing-2xl); background: linear-gradient(135deg, var(--primary-orange-light), var(--accent-blue-hover)); border: 2px solid var(--primary-orange); border-radius: var(--radius-lg); padding: var(--spacing-lg);">
                 <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-6409311049525505"
-                     data-ad-slot="7317445135"
-                     data-ad-format="fluid"
-                     data-ad-layout-key="-ef+6k+3z-d+2c"
-                     data-full-width-responsive="true"></ins>
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-6409311049525505"
+     data-ad-slot="4452408958"></ins>
             </div>
         </div>
     </section>
@@ -2415,11 +2412,10 @@
             `;
             adContainer.innerHTML = `
                 <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-6409311049525505"
-                     data-ad-slot="7317445135"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-6409311049525505"
+     data-ad-slot="5707276100"></ins>
             `;
             
             const container = document.querySelector('.container');
